Improve Java emitter by enhancing import handling and resolving fully qualified names